minified pictures a little, added google analytics, added resume links

--- a/source/scripts/templates/brandingPage.jade
+++ b/source/scripts/templates/brandingPage.jade
@@ -1,1 +1,27 @@
 h1 Branding
+
+img.drib.triplet(src='scripts/templates/images/bettrbits.png')
+img.drib.triplet(src='scripts/templates/images/boxes.png')
+img.drib.triplet(src='scripts/templates/images/truck.png')
+.clearfix
+
+img.drib.twin(src='scripts/templates/images/hiredpan.png')
+img.drib.twin(src='scripts/templates/images/pan.png')
+.clearfix
+
+img.drib.twin(src='scripts/templates/images/robot.png')
+img.drib.twin(src='scripts/templates/images/robotclose.png')
+.clearfix
+
+img.drib.twin(src='scripts/templates/images/mug.png')
+img.drib.twin(src='scripts/templates/images/pencil.png')
+.clearfix
+
+img.drib.single(src='scripts/templates/images/tartans.png')
+.clearfix
+//img.drib.single(src='scripts/templates/images/campuscab.png')
+//.clearfix
+img.drib.single(src='scripts/templates/images/taxi.png')
+.clearfix
+img.drib.single(src='scripts/templates/images/enrico.png')
+.clearfix
