--- a/source/style/main.less
+++ b/source/style/main.less
@@ -20,6 +20,9 @@ a, a:visited, a:hover {
         cursor: default;
     }
 }
+
+.clearfix {clear: both}
+
 h1 {
     font-weight: bold;
     font-size: 1.3em;
@@ -30,6 +33,10 @@ h2 {
 }
 h3 {
     font-size: 1.1em;
+}
+html {
+    //always show scroll bar
+    overflow-y: scroll;
 }
 body {
     font-size: 12px;
@@ -56,17 +63,23 @@ body {
         float: left;
         margin: 15px 0 0 15px;
     }
+    .header_right {
+        float: right;
+        margin: 3px 20px 0 0;
+    }
+
 
     #header {
       .column(9);
       .push(3);
-      margin-bottom: 50px;
+      margin-bottom: 30px;
     }
 
     #main_container {
       .column(9);
       .border_top;
       padding-top: 10px;
+      margin-bottom: 100px;
     }
 
     #sidebar {
@@ -78,17 +91,18 @@ body {
       h2 {
           margin-bottom: 10px;
       }
-      ul.links {
-          li {
-              font-size: 1.1em;
-              margin-bottom: 5px;
-          }
-      }
     }
 
+    ul.links {
+        li {
+            font-size: 1.1em;
+            margin-bottom: 5px;
+        }
+    }
 }
 
 .main_page {
+
     p {
         width: 80%;
     }
@@ -97,7 +111,21 @@ body {
     }
     img {
         max-width: 100%;
-        margin-top: 10px;
+        margin-top: 20px;
+        &.drib.single {
+            width: 400px;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        &.triplet {
+            max-width: 33%;
+            float: left;
+        }
+        &.twin {
+            max-width: 50%;
+            float: left;
+        }
     }
 }
 
