--- a/source/projects/spaViz/template.jade
+++ b/source/projects/spaViz/template.jade
@@ -1,10 +1,10 @@
 h1 #{name}
 
-p Structural Path Analysis: Currently leading a
-  | three person group working to visualize data from the
+p Structural Path Analysis:  Designed and developed
+  | a visualization of data from the
   | Economic Input-Output Life Cycle Assessment, a CEE
   | department initiative. EIOLCA asesses the environmental
-  | impact of economic activity between sectors. Our treemap
+  | impact of economic activity between sectors. The treemap
   | style visualization shows environmental detriments across a
   | sector lifecycle.
 
